--- a/index.html
+++ b/index.html
@@ -14,17 +14,23 @@
 	<script src="script/core.js"></script>
 </head>
 <body>
+	<audio id="audio"></audio>
 	<main>
-		<div id="cover"></div>
-		<h1 id="title"></h1>
-		<h3 id="artist" class="sub-title"></h3>
-		<h3 id="artist" class="sub-title"></h3>
-
+		<div id="cover">
+			<img src="cover/RADIANT DANCEFLOOR.jpg" />
+		</div>
+		<div id="info">
+			<h1 id="title">7TH FULL MOON</h1>
+			<h3 id="artist" class="sub-title">Babbe Music</h3>
+			<h3 id="album" class="sub-title">RADIANT DANCEFLOOR</h3>
+		</div>
+		<!--
 		<div id="previous"></div>
 		<div id="play"></div>
 		<div id="next"></div>
 
 		<div id="progress"></div>
+		-->
 	</main>
 	<script src="script/frame.js"></script>
 </body>
