换下一首歌曲的时候，界面内容刷新
进度条

一个bugger……

还有totalBetas，因此加入了 bp-stream.js （然后给bp-core.js增加了写插件的途径）

bp-core 0.0.2
	插件机制

	优化了一下 事件轮询 的代码，使其更简单易懂些

	reEvent
	addEvent
	fetchEvent
	rmPoolItem
	这上面四个方法都不是又构造函数构造，移到了 BPCore.prototype里

	增加了一个 version 属性（显示版本用的）

--- a/index.html
+++ b/index.html
@@ -12,17 +12,19 @@
 	<script src="script/tool.js"></script>
 	<script src="script/remilia.js"></script>
 	<script src="script/core.js"></script>
+	<script src="script/bp-stream.js"></script>
 </head>
 <body>
 	<audio id="audio"></audio>
 	<main>
 		<div id="cover">
-			<img src="cover/RADIANT DANCEFLOOR.jpg" />
+			<div id="ring"></div>
+			<img />
 		</div>
+		<h1 id="title">LOADING</h1>
 		<div id="info">
-			<h1 id="title">7TH FULL MOON</h1>
-			<h3 id="artist" class="sub-title">Babbe Music</h3>
-			<h3 id="album" class="sub-title">RADIANT DANCEFLOOR</h3>
+			<h3 id="artist" class="sub-title">N/A</h3>
+			<h3 id="album" class="sub-title">N/A</h3>
 		</div>
 		<!--
 		<div id="previous"></div>
@@ -32,6 +34,12 @@
 		<div id="progress"></div>
 		-->
 	</main>
+	<div id="progress">
+		<div class="current"></div>
+	</div>
+	<div id="bugger">
+		asd
+	</div>
 	<script src="script/frame.js"></script>
 </body>
 </html>
