主要更新： 	scrollSelector 		利用鼠标滚动来选择曲目
	新增 currsorchange 核心事件

	BP.prototype.previous 方法

	frame.js 的结构大调整

	界面的调整
		去掉 专辑、艺术家 栏目

	bp-menu.js && bp-menu.css 加入，但是没用在项目里

--- a/index.html
+++ b/index.html
@@ -18,28 +18,26 @@
 	<audio id="audio"></audio>
 	<main>
 		<div id="cover">
-			<div id="ring"></div>
 			<img />
 		</div>
 		<h1 id="title">LOADING</h1>
-		<div id="info">
+		<div id="info" style="display:none" >
 			<h3 id="artist" class="sub-title">N/A</h3>
 			<h3 id="album" class="sub-title">N/A</h3>
 		</div>
-		<!--
-		<div id="previous"></div>
-		<div id="play"></div>
-		<div id="next"></div>
-
-		<div id="progress"></div>
-		-->
 	</main>
+	<div id="bugger">
+	</div>
+
+	<div id="scroll-selector">
+		<ul id="ss-list">
+		</ul>
+	</div>
+
 	<div id="progress">
 		<div class="current"></div>
 	</div>
-	<div id="bugger">
-		asd
-	</div>
+
 	<script src="script/frame.js"></script>
 </body>
 </html>
