bp-core.md 	更新了文档
bm.css
	做了些微调

bm.js
	bm-item的title属性支持DOM或者PureObject
	如果是DOM的话则将其设置为 $c tag
	如果是PureObject的话则将其设置为 $c html

	items.title 的数据绑定

bp-stream.js
	适配新的插件机制

cd.js
	似乎只是改了个版本

core.js
	BP.prototype.next 改成了受播放模式影响

	架构大改，不应该放在 BP.prototype 的都移动到构造函数里

	BPList.prototype.supportPlayMode 的加入

	新的插件机制（由于大改的原因）

frame.js
	About 类的加入

	contextMenu 类的加入

	frame的版本升到 0.2.0（貌似第一次写上version信息）

global.css
	main 加入了 transform: rotate(0deg); 这样没意义的CSS（（（（
	其实是为了提升显示性能

	字体微调

	menu相关的CSS加入

	about相关的CSS加入

index.html
	删除 tool.js 的引用
	加入 bm.css 的引用
	加入cd.js、bm.js的引用

	写了个 id为about 的div

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 	<title>bPlayer</title>
 
 	<link href="style/global.css" rel="stylesheet" type="text/css" />
-	<script src="script/tool.js"></script>
+	<link href="script/bm.css" rel="stylesheet" type="text/css" />
+
+	<script src="script/cd.js"></script>
+	<script src="script/bm.js"></script>
 	<script src="script/remilia.js"></script>
 	<script src="script/core.js"></script>
 	<script src="script/bp-stream.js"></script>
@@ -26,6 +29,10 @@
 			<h3 id="album" class="sub-title">N/A</h3>
 		</div>
 	</main>
+
+	<div id="about">
+	</div>
+
 	<div id="bugger">
 	</div>
 
