core.js 	sekking事件添加到 eventList
frame.js
	Config类的加入
		播放模式是自动保存的

	Setting类的加入
		也就是设置界面
		目前仅支持：
			启用totalBeats
			播放粒度

	totalBeats的一些方法做了一些微调
		新增了totalBeats::enableBeat方法

	进度条适配了设置中的“进度条播放粒度”

	版本升到 0.3.3

global.css
index.html
	对设置界面新增了代码

	另外对global.css进行了调整

--- a/index.html
+++ b/index.html
@@ -36,6 +36,22 @@
 	<div id="bugger">
 	</div>
 
+	<div id="setting">
+		<form id="config">
+			<label>
+				<input name="totalbeats" type="checkbox" id="totalbeats" checked="false" />启用totalBeats
+			</label>
+			<label>
+				<input name="progresssize" type="text" id="progresssize" pattern="(^[0-9]*)\.*([0-9]*)" title="大于0的数字"/>设定进度条粒度
+			</label>
+
+			<div class="setting-control">
+				<input type="submit" value="应用" />
+				<button>关闭</button>
+			</div>
+		</form>
+	</div>
+
 	<div id="scroll-selector">
 		<ul id="ss-list">
 		</ul>
