setting界面定位的问题 	比如靠边的时候，但是一看就知道不会靠边，窗口仍然会靠边
火狐滚轮换曲失效的问题

顺便改了个 <title>

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
 	<meta name="HandheldFriendly" content="true" />
 
-	<title>bPlayer</title>
+	<title>-bp-</title>
 
 	<link href="style/global.css" rel="stylesheet" type="text/css" />
 	<link href="script/bm.css" rel="stylesheet" type="text/css" />
